refactor backend for practice